--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,24 @@ p{
     background-color: #1212121A;
     margin: 0 auto ;
 }
+.meet{
+    background-image: url(../images/team.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 8px;
+    overflow: hidden;
+    position: relative;
+    z-index: 0;
+}
+.meet::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-color: #000;
+    z-index: -1;
+}
